--- a/ts/src/styles.scss
+++ b/ts/src/styles.scss
@@ -1,4 +1,5 @@
 @import "node_modules/bootstrap/";
+@import './../node_modules/bootstrap-icons/font/bootstrap-icons';
 
 $primary: #ed7839;
 $primary_light: #fdf1eb;
