--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,11 +1,28 @@
 <div class="d-flex flex-nowrap vh-100">
 
+  <section class="sidebar shadow vh-100" style="width: 220px;">
+    <div class="bg-primary">
+      <p class="text-white text-center py-3 h3">SLACA 2019</p>
+    </div>
+    <img src="../assets/scala.png" width="100%">
 
-  <div class="col-12" role="main">
+    <nav class="col-12">
+      <ul class="p-0">
+        <li class="optionSidebar"><a>Apresentação</a></li>
+        <li class="optionSidebar"><a>Comitês</a></li>
+        <li class="optionSidebar"><a>Autores</a></li>
+        <li class="optionSidebar"><a>Eixos temáticos</a></li>
+        <li id="active" class="optionSidebar"><a>Trabalhos</a></li>
+        <li class="optionSidebar"><a>Contato</a></li>
+      </ul>
+    </nav>
+  </section>
+
+  <div class="col" role="main">
     <header class="col-auto">
-      <div class="bg-primary-subtle d-flex flex-nowrap align-items-center px-3 py-1 gap-3">
+      <div class="bg-primary-subtle d-flex flex-nowrap align-items-center px-5 pt-2 gap-3">
         <div class="col">
-          <p>Anais do Simpósio Latino Americano de Ciências de Alimentos</p>
+          <p class="m-0">Anais do Simpósio Latino Americano de Ciências de Alimentos</p>
           <h1 class="h5 m-0">Anais do 13º Simpósio Latino Americano de Ciência de Alimentos</h1>
           <p>ISSN: 1234-5678</p>
         </div>
@@ -25,7 +42,7 @@
 
         <div class="col-auto d-flex justify-content-end align-items-center gap-1">
           <div class="d-flex flex-column align-items-end">
-            <p>Bem vindo!</p>
+            <p class="m-0">Bem vindo!</p>
             <p>alguem12&#64;galoascience.com</p>
           </div>
           <img class="rounded-circle" src="./assets/usuario.png" width="36px">
@@ -33,7 +50,7 @@
       </div>
     </header>
 
-    <div class="m-3">
+    <div class="mx-5 my-3">
       <div class="row d-flex justify-content-between align-items-center mt-3">
 
         <h2 class="text-primary fw-bold h5 col-8 ">{{ title }}</h2>
@@ -61,7 +78,7 @@
 
       <div class="position-relative">
         <img class="video" src="../assets/video.png">
-        <div class="mask bg-primary bg-opacity-25 p-4 d-flex flex-column justify-content-between">
+        <div class="mask p-4 d-flex flex-column justify-content-between">
           <p class="h4 text-white fw-bold">Análise sensorial de preparações funcionais desenvolvidas para escolares
             entre
             09
