--- a/ts/src/app/app.component.scss
+++ b/ts/src/app/app.component.scss
@@ -58,7 +58,8 @@ svg#clouds {
 }
 
 .sidebar {
-  padding: 4;
+  min-height: 100%;
+  display: block;
   nav {
     width: 100%;
 
@@ -77,4 +78,19 @@ svg#clouds {
       background-color: $primary_subtle;
     }
   }
+}
+
+footer{
+  margin-top: 100px;
+}
+p{
+  margin: 0;
+}
+
+summary{
+  list-style: none;
+}
+
+.hidden{
+  color: white;
 }
