--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -165,7 +165,7 @@
           </button>
         </div>
 
-        <form  class="d-flex flex-wrap d-none p-3" id="form">
+        <form class="d-flex flex-wrap d-none p-3" id="form">
           <div class="col-12 mb-3">
             <label for="subject" class="form-label text-primary fw-bold">Assunto:</label>
             <input type="text" class="subject form-control rounded-0" id="subject" formControlName="subject"
@@ -178,46 +178,60 @@
           </div>
 
           <div class="col-12 bg-secondary-subtle border-1 d-flex justify-content-end">
-            <button class="btn btn-primary btn-enviar text-white px-5 rounded-0" type="button" (click)="createTopic()">Enviar</button>
+            <button class="btn btn-primary btn-enviar text-white px-5 rounded-0" type="button"
+              (click)="createTopic()">Enviar</button>
           </div>
         </form>
       </div>
     </div>
+    <div id="feedback"
+      class="d-none mx-3 mt-0 mb-3 d-flex flex-column justify-content-center align-items-center rounded bg-secondary bg-opacity-25">
+      <i class="bi-check2-all fs-5"></i>
+      <p class="h5">Aguardando feedback dos autores</p>
+      <a class="btn btn-link text-primary">Editar tópico</a>
+    </div>
 
 
 
-   <div class="card shadow card-body mx-3 mt-5 rounded" *ngFor="let c of comments">
-    <div class="p-2 answered-topic pointer">
-      <a class="ops-topic-subject h6 card-title text-decoration-none text-primary fw-bold ">
-        {{c.subject}}
-      </a>
-      <p class="card-subtitle h6 fw-bold">
-        <small> {{c.author}}</small>
-      </p>
+    <div *ngFor="let t of topics; index as i">
+      <div class="card shadow card-body mx-3 mt-2 rounded">
+        <div class="p-2 answered-topic pointer">
+          <a class="ops-topic-subject h6 card-title text-decoration-none text-primary fw-bold ">
+            {{t.subject}}
+          </a>
+          <p class="card-subtitle h6 fw-bold">
+            <small> {{t.author}}</small>
+          </p>
   
-      <p class="card-text my-3" >{{c.content}}</p>
+          <p class="card-text my-3" (click)="openComment(t)">{{t.content}} </p>
   
-      <div class="d-flex flex-row align-items-center gap-2">
-        <a class="btn text-primary p-0">
-          <i class="bi-three-dots-vertical text-primary"></i>
-        </a>
-        <a class="btn btn-primary">
-          <i class="bi-heart-fill text-white"></i>
-        </a>
-        <p>1 like</p>
-        <p>{{c.comment>0? c.comment+" resposta" : ""}}</p>
+          <div class="d-flex flex-row align-items-center gap-2">
+            <a class="btn text-primary p-0">
+              <i class="bi-three-dots-vertical text-primary"></i>
+            </a>
+            <a class="btn btn-primary" (click)="like(i)">
+              <i class="bi-heart-fill text-white"></i>
+            </a>
+            <p>{{t.like!=1? t.like+ " likes" : t.like+" like"}} </p>
+            <p>{{t.comment>0? t.comment+" resposta" : ""}}</p>
+          </div>
+        </div>
+      </div>
+  
+      <div class="card card-body p-3 mx-3 mt-0 border-end comments-container d-none" id="comment">
+        <div class="card-title d-flex flex-nowrap align-items-center">
+          <p class="col fw-bold m-0">
+            <small>Letícia</small>
+          </p>
+          <span class="fw-bold text-primary">Coautor</span>
+          <i class="bi-check2-all text-primary px-2"></i>
+        </div>
+  
+        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor laborum saepe dolorem
+          quibusdam quaerat quae dignissimos voluptatum nisi voluptates odio corporis cum enim quidem architecto
+          laudantium, commodi, necessitatibus eum sapiente.</p>
       </div>
     </div>
-  </div>
-  
-    <br>
-    <br>
-
-   <div class="comments-container"></div>
-    
-
-
-    <h3>Após submeter o formulário, a seguinte mensagem deve ser exibida: Aguardando feedback dos autores</h3>
 
 
 
