--- a/ts/src/styles.scss
+++ b/ts/src/styles.scss
@@ -1,2 +1,7 @@
 @import "node_modules/bootstrap/";
 @import './../node_modules/bootstrap-icons/font/bootstrap-icons';
+
+p {
+    margin: 0;
+  }
+  
