--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -90,7 +90,7 @@
           <p class="text-center">Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade?
             Deixe seus questionamentos ou sugestões para o autor!</p>
 
-          <button type="button" class="btn btn-primary text-white btn-create-topic" (click)="click()">
+          <button type="button" class="btn btn-primary text-white" (click)="click()">
             <i class="bi bi-plus-lg text-white p-2"></i>criar tópico
           </button>
         </div>
