fix: add class btn-create-topic

--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-nowrap vh-100">
+<div class="d-flex flex-nowrap">
 
   <sidebar-component></sidebar-component>
 
-  <div role="main" style="overflow-y: scroll">
+  <div role="main" style="overflow-y: scroll;">
     <header-component></header-component>
 
     <div class="mx-3 my-3 d-flex">
@@ -90,7 +90,7 @@
           <p class="text-center">Sabia que o maior estímulo no desenvolvimento científico e cultural é a curiosidade?
             Deixe seus questionamentos ou sugestões para o autor!</p>
 
-          <button type="button" class="btn btn-primary text-white" (click)="click()">
+          <button type="button" class="btn btn-primary text-white btn-create-topic" (click)="click()">
             <i class="bi bi-plus-lg text-white p-2"></i>criar tópico
           </button>
         </div>
