--- a/ts/src/app/components/header/header.component.html
+++ b/ts/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
     <div class="bg-primary-subtle d-flex flex-nowrap align-items-center px-3 pt-2 gap-3">
       <div class="w-100">
         <p class="m-0">Anais do Simpósio Latino Americano de Ciências de Alimentos</p>
