fix: Resolving overflow Issue on main div

--- a/ts/src/app/app.component.html
+++ b/ts/src/app/app.component.html
@@ -2,10 +2,10 @@
 
   <sidebar-component></sidebar-component>
 
-  <div role="main" style="overflow-y: scroll;">
+  <div role="main" >
     <header-component></header-component>
 
-    <div class="mx-3 my-3 d-flex">
+    <div class="mx-3 my-3 d-flex gap-3">
       <div class="col-9">
         <h2 class="text-primary fw-bold h5 col-8 ">{{ title }}</h2>
 
